--- a/src/components/Feature/Feature.scss
+++ b/src/components/Feature/Feature.scss
@@ -2,9 +2,9 @@
     margin-bottom: 100px;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
 
-    
     .feature__card{
         width: 180px;
         //height: 190px;
