--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -1,5 +1,9 @@
 .grid{
-    width: 1200px;
-    max-width: 100%;
+    // width: 1200px;
+    // max-width: 100%;
+    // margin: 0 auto;
+
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
 }
