--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,5 +1,5 @@
 .hero{
-    background-image: url('../../assets/img/hero.png');
+    background-image: url('../../assets/img/hero4.png');
     width: 100%;
     height: 75vh;
     display: flex;
