--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,5 +1,7 @@
 .hero{
     background-image: url('../../assets/img/hero4.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     height: 75vh;
     display: flex;
