--- a/src/components/Section/Section.scss
+++ b/src/components/Section/Section.scss
@@ -2,13 +2,13 @@
     margin-bottom: 70px;
 
     &>*~*{
-        margin-top: 70px;
+        //margin-top: 70px;
     }
 
     &__title{
         font-size: 3.2rem;
         text-transform: capitalize;
-        text-align: center;
+        //text-align: center;
         font-weight: 500;
     }
 }
