--- a/src/components/DefaultLayout/Letter/Letter.scss
+++ b/src/components/DefaultLayout/Letter/Letter.scss
@@ -11,7 +11,7 @@
         flex-wrap: wrap;
         align-items: center;
 
-        &-title{
+        &__title{
 
             &-register{
                 font-size: 2.4rem;
@@ -32,10 +32,43 @@
             }
         }
     
-        &-form{
-    
+        &__form{
             display: flex;
+            width: 30%;
             align-items: center;
+            --height: 60px;
+            --font-size: 1.5rem;
+    
+            &-input{
+                height: var(--height);
+                padding-left: 18px;
+                font-size: var(--font-size);
+                width: 100%;
+                border: 1px solid transparent;
+                border-radius: 4px;
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+                outline: none;
+            }
+
+            &-btn{
+                height: var(--height);
+                font-size: var(--font-size);
+                font-weight: 600;
+                cursor: pointer;
+                padding: 0 24px;
+                white-space: nowrap;
+                background-color: #088175;
+                color: #fff;
+                border-radius: 4px;
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
+                border: 1px solid transparent;
+
+                &:hover{
+                    opacity: 0.9;
+                }
+            }
         }
     }
 
