--- a/src/components/CartItem.js/CartItem.scss
+++ b/src/components/CartItem.js/CartItem.scss
@@ -1,13 +1,34 @@
 .cart__item{
+    --center: center;
 
+    td{
+        padding-top: 15px;
+        font-size: 1.5rem;
+    }
+
+    & td:nth-child(1){
+        width: 100px;
+        text-align: var(--center);
+    }
     & td:nth-child(2){
-        width: 15%;
+        width: 150px;
+        text-align: var(--center);
+    }
+    & td:nth-child(3){
+        width: 250px;
+        text-align: var(--center);
+    }
+    & td:nth-child(4),
+    & td:nth-child(5){
+        width: 150px;
+        text-align: var(--center);
     }
 
-    &-icon{
+    & td:nth-child(5) input{
+        width: 70px;
+        padding: 10px 5px 10px 15px;
     }
-
     &-img{
-        width: 50%;
+        width: 70px;
     }
 }
