--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -21,7 +21,203 @@ body{
     font-size: 1.6rem;
 }
 
+img{
+    width: 100%;
+}
+
 .section-m1{
     margin: 40px 0;
 }
 
+.mt-20{
+    margin-top: 20px;
+}
+
+
+.form-group{
+    outline: none;
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 12px;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 4px;
+}
+
+table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+td,th{
+    border: 1px solid #ccc;
+    padding: 4px;
+    font-size: 1.4rem;
+}
+
+tbody{
+    text-align: center;
+}
+
+button{
+    padding: 8px;
+    border: none;
+    font-size: 1.4rem;
+    font-weight: 600;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn-edit{
+    margin-right: 2px;
+    background-color: #33cc99;
+    color: #fff;
+}
+
+.btn-delete{
+    background-color: rgb(209, 10, 10);
+    color: #fff;
+}
+
+.btn-cancel{
+    background-color: #ddd;
+}
+
+select{
+    outline: none;
+}
+
+.col-1{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 8.3334%;
+}
+
+.col-2{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.6667%;
+}
+
+.col-3{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 25%;
+}
+
+.col-4{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 33.3334%;
+}
+
+.col-5{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 41.6667%;
+}
+
+.col-6{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 50%;
+}
+
+.col-7{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 58.3334%;
+}
+
+.col-8{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 66.6667%;
+}
+
+.col-9{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 75%;
+}
+
+.col-10{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 83.3334%;
+}
+
+.col-11{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 91.6667%;
+}
+
+.col-12{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 100%;
+}
+
+.col-12-5{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
+
+/*Admin page*/
+.wrapper{
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    overflow: hidden;
+
+    .form__title{
+        background-color: #6c757d;
+        color: #fff;
+        padding: 8px 12px;
+    }
+
+    .form__body{
+        padding: 8px 200px;
+    }
+
+    .form__footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #f7f7f7;
+        padding: 8px 12px;
+    }
+
+    .form__control{
+        display: flex;
+        align-items: center;
+        margin-bottom: 14px;
+
+        label{
+            margin-right: 8px;
+            width: 25%;
+        }
+
+        .form__group{
+            outline: none;
+            height: 28px;
+            padding: 0 8px;
+            width: 50%;
+        }
+
+        .form__checkbox{
+            width: 20px;
+            height: 20px;
+        }
+
+        .form__input-text{
+           height: 28px;
+           outline: none;
+        }
+
+        textarea{
+            height: 100px;
+            width: 50%;
+        }
+    }
+}
