--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,8 @@
     --primary-color: #33cc99;
     --extra-color:  #088178;
     --border-color: #cce7d0;
+    --price-color: #ed3324;
+    --btn-color: #199794;
 }
 
 *{
