--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,5 +1,6 @@
 .product-card{
-    margin-top: 10px;
+    //margin-top: 10px;
+    margin: 10px 4px 0 4px;
     border-radius: 20px;
     border: 1px solid #cce7d0;
     padding: 12px;
@@ -10,15 +11,12 @@
     &:hover{
         box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
     }
-
-    margin: 0 6px;
    
 
     .product-card__link{
         text-decoration: none;
         color: #000;
        
-
         .product-card__image{
             width: 100%;
             border-radius: 20px;
