--- a/src/components/ProductView/ProductView.scss
+++ b/src/components/ProductView/ProductView.scss
@@ -20,6 +20,14 @@
 .product__info{
     padding: 40px;
 
+    &-brand{
+        margin-bottom: 10px;
+
+        span{
+            font-size: 1.5rem;
+        }
+    }
+
     .product__info-title{
         font-size: 2.6rem;
         font-weight: 600;
@@ -71,6 +79,7 @@
 
     .product__info-qty{
         margin-bottom: 30px;
+        display: flex;
         
         .product__info-qty-title{
             font-size: 1.8rem;
@@ -83,6 +92,27 @@
             height: 34px;
             font-size: 1.8rem;
             text-align: center;
+        }
+
+        .product__info-qty-mount{
+            display: flex;
+            align-items: center;
+            
+            .product__info-qty-btn{
+                border: 2px solid #000;
+                width: 40px;
+                text-align: center;
+                cursor: pointer;
+            }
+
+            .product__info-qty-input{
+                border-top: 2px solid #000;
+                border-bottom: 2px solid #000;
+                width: 40px;
+                text-align: center;
+                font-weight: 600;
+            
+            }
         }
     }
 
