--- a/src/pages/admin/components/Layout/Layout.scss
+++ b/src/pages/admin/components/Layout/Layout.scss
@@ -1,8 +1,11 @@
 
 .admin{
     margin-right: 5px;
-    .container{
+
+
+    .content{
         //background-color: #f4f6f9;
-        padding: 20px 0;
+        padding: 90px 20px 20px;
+        
     }
 }
