--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,18 +1,18 @@
 .sidebar{
-    background-color: #e3e6f2;
     min-height: 100vh;
-    padding: 26px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
+    border-right: 1px solid rgba(0,0,0,0.2);
     position: fixed;
-    top: 0;
+    top: 60px;
     left: 0;
 
     &__logo{
         margin-bottom: 10px;
         font-size: 3rem;
         font-weight: 600;
-        color: var(--extra-color);
+        color: #000;
     }
 
     &__list{
@@ -21,13 +21,11 @@
         flex-direction: column;
 
         .active{
-            display: block;
-            background-color: var(--extra-color);
-            color: #fff;
             font-weight: 600;
             text-decoration: none;
-            border-radius: 4px;
             padding: 6px 18px;
+            color: rgba(0,0,0,0.4);
+            font-size: 1.8rem;
         }
 
         &-item{
@@ -35,7 +33,7 @@
             margin: 10px 0;
 
             .sidebar__list-link{
-                color: var(--extra-color);
+                color: #000;
                 text-decoration: none;
                 padding-left: 18px;
             }
