--- a/src/pages/admin/pages/Product/Product.scss
+++ b/src/pages/admin/pages/Product/Product.scss
@@ -1,3 +1,10 @@
+.product__title{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+
+}
+
 .product{
     &__list{
         & th:nth-child(2){
