--- a/src/components/DefaultLayout/Header/Header.scss
+++ b/src/components/DefaultLayout/Header/Header.scss
@@ -1,6 +1,101 @@
 .header{
-    background-color: #e3e6f2;
-    width: 100%;
+    // background-color: #e3e6f2;
+    // width: 100%;
+
+    background-color: var(--header-background);
+    height: 86px;
+
+    .header__main{
+        height: 100%;
+        display: flex;
+        align-items: center;
+
+        .header__list{
+            display: flex;
+            align-items: center;
+            margin-left: 40px;
+            color: var(--header-color);
+            line-height: 2rem;
+            list-style: none;
+            flex: 1;
+            justify-content: space-between;
+
+            .system-shop{
+               width: 68px;
+            }
+
+            .header__list-item--cart{
+                border: 2px solid var(--subheader-background) ;
+                padding: 8px;
+                border-radius: 6px;
+
+                &:hover{
+                    color: #fff !important;
+                    background-color: var(--subheader-color);
+                }
+            }
+           
+            .header__list-item{
+                display: flex;
+                align-items: center;
+                font-size: 1.4rem;
+                i{
+                    font-size: 2.4rem;
+                    margin-right: 6px;
+                }
+
+                .header__list-link{
+                    display: block;
+                    text-decoration: none;
+                    color: var(--header-color);
+                    &:hover{
+                        color: var(--secondary-color);
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+        .header__logo{
+            margin-right: 46px;
+            max-width: 248px;
+        }
+
+        .header__search{
+            position: relative;
+           
+            &-input{
+                width: 396px;
+                background: #f1f1f1;
+                border-radius: 4px;
+                font-size: 1.4rem;
+                padding: 12px 14px;
+                
+            }
+
+            &-btn{
+                background-color: var(--secondary-color);
+                position: absolute;
+                right: 0;
+                height: 100%;
+                border-top-right-radius: 4px;
+                border-bottom-right-radius: 4px;
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
+
+                //padding: 7px 20px;
+                width: 64px;
+
+                i{
+                    font-size: 1.7rem;
+                }
+
+                &:hover{
+                    filter: brightness(1.1);
+                }
+            }
+          
+        }
+    }
     
     .header__navbar{
         display: flex;
@@ -94,6 +189,4 @@
             }
         }
     }
-
-   
 }
