--- a/src/components/Section/Section.scss
+++ b/src/components/Section/Section.scss
@@ -1,15 +1,14 @@
 .section {
-    margin-bottom: 70px;
-    margin-top: 70px;
+    margin-bottom: 40px;
+    margin-top: 40px;
 
     &>*~* {
         //margin-top: 70px;
     }
 
     &__title {
-        font-size: 3.2rem;
-        text-transform: capitalize;
-        //text-align: center;
-        font-weight: 500;
+        font-size: 2.2rem;
+        font-weight: 600;
+        text-transform: uppercase;
     }
 }
