--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -124,23 +124,22 @@ select{
 
 /*Admin page*/
 .wrapper{
-    border: 1px solid #ccc;
+    border: 1px solid #f1f1f1;
     border-radius: 4px;
     overflow: hidden;
 
     .form__title{
-        background-color: #6c757d;
-        color: #fff;
+        background-color: #dfeffe;
+        color: #000;
         padding: 8px 12px;
     }
 
     .form__body{
-        padding: 8px 200px;
+        padding: 8px;
     }
 
     .form__footer{
         display: flex;
-        justify-content: space-between;
         align-items: center;
         background-color: #f7f7f7;
         padding: 8px 12px;
