--- a/src/components/HeroSlider/Hero.scss
+++ b/src/components/HeroSlider/Hero.scss
@@ -1,5 +1,17 @@
 .slider{
     height: 400px;
+
+    .scroll{
+        &::-webkit-scrollbar{
+            width: 3px;
+        }
+    
+        &::-webkit-scrollbar-thumb{
+            background-color: var(--primary-color);
+            outline: 1px solid var(--primary-color);
+        }
+    }
+
     .slider__category{
         height: calc(100% - 20%);
         overflow-y: scroll;
@@ -31,3 +43,5 @@
         }
     }
 }
+
+
