--- a/src/pages/admin/components/Layout/Layout.scss
+++ b/src/pages/admin/components/Layout/Layout.scss
@@ -1,11 +1,14 @@
-
 .admin{
-    margin-right: 5px;
+    display: flex;
+    
+    .left{
+            width: 18%;
+        }
 
-
-    .content{
-        //background-color: #f4f6f9;
-        padding: 90px 20px 20px;
-        
-    }
+    .right{
+        width: 82%;
+        .content{
+            padding: 40px 40px 0 40px;
+        }
+    }    
 }
