--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,12 +1,13 @@
 .sidebar{
-    min-height: 100vh;
+    height: 100vh;
+    width: 18%;
     padding: 20px;
     display: flex;
     flex-direction: column;
     border-right: 1px solid rgba(0,0,0,0.2);
     position: fixed;
-    top: 60px;
     left: 0;
+    top: 0;
 
     &__logo{
         margin-bottom: 10px;
@@ -24,8 +25,8 @@
             font-weight: 600;
             text-decoration: none;
             padding: 6px 18px;
-            color: rgba(0,0,0,0.4);
-            font-size: 1.8rem;
+            color: red;
+            //font-size: 1.8rem;
         }
 
         &-item{
@@ -36,6 +37,7 @@
                 color: #000;
                 text-decoration: none;
                 padding-left: 18px;
+                font-size: 1.5rem;
             }
         }
 
