--- a/src/pages/admin/pages/Auth/LoginPageAdmin.scss
+++ b/src/pages/admin/pages/Auth/LoginPageAdmin.scss
@@ -15,11 +15,23 @@
       font-size: 3rem;
       text-align: center;
       font-weight: 600;
+      .a{
+         font-size: 6rem;
+         background-color: #0fd186;
+         color: #fff;
+         padding: 8px;
+         border-radius: 99px;
+
+      }
+      .b{
+         font-size: 5rem;
+         color: #0089ff;
+      }
    }
 
    .admin__title{
-      font-size: 2rem;
-      font-weight: 700;
+      font-size: 3rem;
+      font-weight: 500;
       margin: 18px 0;
       text-align: center;
    }
@@ -28,6 +40,11 @@
       font-size: 1.5rem;
       text-align: center;
       margin-bottom: 12px;
+      .admin__link{
+         text-decoration: none;
+         color: #000;
+         font-weight: 600;
+      }
    }
 
    .admin__btn{
