--- a/src/pages/admin/components/Header/Header.scss
+++ b/src/pages/admin/components/Header/Header.scss
@@ -1,7 +1,7 @@
 .header__admin{
-    background-color: #000;
+    background-color: #eef7fe;
     display: flex;
-    justify-content: space-between;
+   justify-content: flex-end;
     gap: 14px;
     height: 60px;
     line-height: 60px;
@@ -9,15 +9,6 @@
     // top: 0;
     // right: 0;
     // left: 0;
-
-    .header__left{
-        margin-left: 50px;
-        .title{
-            color: #fff;
-            font-size: 3rem;
-            font-weight: 600;
-        }
-    }
 
     .header__right{
         margin-right: 26px;
@@ -27,18 +18,17 @@
 
         .header__admin__name{
             font-size: 1.5rem;
-            color: #fff;
         }
 
         .header__admin__link{
-           color: #fff;
-            
+            color: #000;
         }
 
         .header__admin__logout{
-            color: #fff;
+            background-color: transparent;
             padding-right: 18px;
             cursor: pointer;
+            font-size: 1.6rem;
     
             &:hover{
                 opacity: 0.5;
