--- a/src/pages/admin/components/Product/Add/Add.scss
+++ b/src/pages/admin/components/Product/Add/Add.scss
@@ -1,3 +1,17 @@
 .product-add{
     margin-bottom: 50px;
 }
+
+.btn-back{
+font-size: 1.5rem;
+color: blue;
+cursor: pointer;
+margin-top: 8px;
+}
+
+.file-image{
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    margin: 0 4px;
+}
