--- a/src/components/DefaultLayout/Letter/Letter.scss
+++ b/src/components/DefaultLayout/Letter/Letter.scss
@@ -1,75 +1,84 @@
 .letter{
-    background-image: url('../../../assets/img/banner/b14.png');
-    background-repeat: no-repeat;
-    background-position: 20% 30%;
-    background-color: #041e42;
+    background-color: var(--text-color);
 
     &__main{
-        height: 168px;
+        padding: 10px 0;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         align-items: center;
 
-        &__title{
-
-            &-register{
-                font-size: 2.4rem;
-                color: #fff;
-                font-weight: 700;
-                margin-bottom: 12px;
-                text-transform: capitalize;
+        .letter__media{
+            .facebook{
+                margin-right: 18px;
             }
-        
-            &-des{
-                font-size: 1.8rem;
-                font-weight: 600;
-                color: #818ea0;
-    
-            span{
-                    color: #ffbd27;
-                }
+            .letter__image{
+                width: 34px;
             }
         }
-    
-        &__form{
+
+        .letter__info{
+            flex: 1;
             display: flex;
-            width: 30%;
+            justify-content: flex-end;
             align-items: center;
-            --height: 60px;
-            --font-size: 1.5rem;
-    
-            &-input{
-                height: var(--height);
-                padding-left: 18px;
-                font-size: var(--font-size);
-                width: 100%;
-                border: 1px solid transparent;
-                border-radius: 4px;
-                border-top-right-radius: 0;
-                border-bottom-right-radius: 0;
-                outline: none;
+
+            .letter__title{
+                display: flex;
+                margin: 0 14px;
+
+                .letter__des{
+                    color: #fff;
+                    font-weight: 300;
+                }
+
+                .letter__image{
+                    width: 40px;
+                    margin-right: 8px;
+                }
             }
 
-            &-btn{
-                height: var(--height);
-                font-size: var(--font-size);
-                font-weight: 600;
-                cursor: pointer;
-                padding: 0 24px;
-                white-space: nowrap;
-                background-color: #088175;
-                color: #fff;
-                border-radius: 4px;
-                border-top-left-radius: 0;
-                border-bottom-left-radius: 0;
-                border: 1px solid transparent;
-
-                &:hover{
-                    opacity: 0.9;
+            .letter__form{
+                display: flex;
+                width: 36%;
+                align-items: center;
+                --height: 40px;
+                --font-size: 1.5rem;
+        
+                .letter__form-input{
+                    height: var(--height);
+                    padding-left: 18px;
+                    font-size: var(--font-size);
+                    width: 100%;
+                    border: 1px solid transparent;
+                    border-radius: 4px;
+                    border-top-right-radius: 0;
+                    border-bottom-right-radius: 0;
+                    outline: none;
+                }
+    
+                .letter__form-btn{
+                    height: var(--height);
+                    font-size: var(--font-size);
+                    font-weight: 300;
+                    cursor: pointer;
+                    padding: 0 24px;
+                    white-space: nowrap;
+                    background-color: var(--secondary-color);
+                    color: var(--text-color);
+                    border-radius: 4px;
+                    border-top-left-radius: 0;
+                    border-bottom-left-radius: 0;
+                    border: 1px solid transparent;
+    
+                    &:hover{
+                        opacity: 0.9;
+                    }
                 }
             }
         }
+    
+        
     }
 
    
