--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,10 +1,11 @@
 .sidebar{
+    background-color: #eef7fe;
     height: 100vh;
     width: 18%;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    border-right: 1px solid rgba(0,0,0,0.2);
+    //border-right: 1px solid rgba(0,0,0,0.2);
     position: fixed;
     left: 0;
     top: 0;
