--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -114,6 +114,10 @@ button{
 
 .btn-cancel{
     background-color: #ddd;
+    display: inline;
+    padding: 6px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 select{
