--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,17 +1,10 @@
 .product-card{
-    //margin-top: 10px;
-    margin: 10px 4px 0 4px;
-    border-radius: 20px;
-    border: 1px solid #cce7d0;
+    margin-top: 10px;
+    border: 1px solid #eee;
+    //margin-left: -1px;
+    //margin-bottom: -1px;
     padding: 12px;
-    position: relative;
     cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0,0,0,0.02);
-    transition: 0.2s ease;
-    &:hover{
-        box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
-    }
-   
 
     .product-card__link{
         text-decoration: none;
@@ -21,29 +14,36 @@
             width: 100%;
             border-radius: 20px;
             height: 220px;
-            object-fit: cover;
+            object-fit: contain;
+            &:hover{
+                transform: translateY(-10px);
+                transition: 0.3s ease;
+            }
         }
     
         .product-card__info{
-            text-align: center;
-
-            .product-card__brand{
-                font-size: 1.2rem;
-                padding: 6px 0;
-            }
 
             .product-card__name{
-                font-weight: bold;
-                font-size: 1.5rem;
-                white-space: nowrap;
+                font-weight: 300;
+                font-size: 1.4rem;
+
+                //Text Truncation
+                // white-space: nowrap;
+                // overflow: hidden;
+                // text-overflow: ellipsis;
+
+                //Multiple Line Text Truncation
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
                 overflow: hidden;
-                text-overflow: ellipsis;
+
             }
 
             .product-card__rating{
                 display: flex;
                 align-items: center;
-                justify-content: center;
+                justify-content: flex-start;
                 gap: 4px;
 
                 .product-card__rating-item{
@@ -51,7 +51,7 @@
 
                     .product-card__rating-icon{
                         color: rgb(243, 181, 25);
-                        font-size: 1.2rem;
+                        font-size: 1.1rem;
                         padding: 6px 0;
                     }
                 }
@@ -60,10 +60,15 @@
             .product-card__price{
 
                 .product-card__price-sale{
-                    color: var(--extra-color);
+                    color: red;
                     font-weight: bold;
                     font-size: 1.5rem;
                     padding-right: 8px;
+                    sup{
+                        font-size: 1.2rem;
+                        font-weight: 800;
+                        text-decoration: underline;
+                    }
                 }
 
                 .product-card__price-old{
