--- a/src/components/ProductView/ProductView.scss
+++ b/src/components/ProductView/ProductView.scss
@@ -2,9 +2,9 @@
 
     .product__images-main{
         width: 100%;
-        height: auto;
+        height: 380px;
         border: 1px solid var(--border-color);
-        object-fit: cover;
+        object-fit: contain;
     }
 
     .product__images-list{
@@ -12,7 +12,10 @@
       justify-content: space-between;
         .product__images-list-item{
             width: 24%;
-            border: 1px solid var(--border-color);
+            &:active{
+                border: 1px solid var(--primary-color);
+            }
+            
         }
     }
 }
