Doing category page

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -54,6 +54,11 @@ img{
     width: 100%;
 }
 
+.product__list{
+    border-left: 1px solid #f1f1f1;
+    border-top: 1px solid #f1f1f1;
+}
+
 .section-m1{
     margin: 40px 0;
 }
