--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,8 +1,10 @@
 .product-card{
-    margin-top: 10px;
-    border: 1px solid #eee;
+   //margin-top: 10px;
+    //border: 1px solid #eee;
     //margin-left: -1px;
     //margin-bottom: -1px;
+    border-right: 1px solid #f1f1f1;
+    border-bottom: 1px solid #f1f1f1;
     padding: 12px;
     cursor: pointer;
 
