--- a/src/pages/clients/Catalog/Catalog.scss
+++ b/src/pages/clients/Catalog/Catalog.scss
@@ -1,5 +1,13 @@
+.catalog__title{
+    margin-bottom: 10px;
+    font-size: 2.5rem;
+    font-weight: 400;
+}
+
 .catalog{
     border-right: 1px solid #ccc;
+
+ 
 
     &__list{
         padding-right: 8px;
