--- a/src/pages/clients/Checkout/Checkout.scss
+++ b/src/pages/clients/Checkout/Checkout.scss
@@ -5,8 +5,9 @@
    .checkout__info{
         width: 68%;
         height: 100vh;
-        border-right: 1px solid #ccc;
+        border-right: 1px solid #ddd;
         padding: 20px 20px 0;
+       
         .checkout__logo{
             .checkout__logo-link{
                 text-decoration: none;
@@ -31,15 +32,13 @@
                     margin-bottom: 8px;
                 }
                 .content__payment-body{
-                    border-bottom: 1px solid #ccc;
                     border-top: 1px solid #ccc;
-                    // border-top-left-radius: 6px;
-                    // border-top-right-radius: 6px;
-                    overflow: hidden;
+                    border-left: 1px solid #ccc;
                     .content__radio{
-                        border-left: 1px solid #ccc;
+                        padding: 20px;
+                        border-bottom: 1px solid #ccc;
                         border-right: 1px solid #ccc;
-                        padding: 6px;
+                       
                         label{
                             margin-left: 6px;
                         }
@@ -47,16 +46,150 @@
                  
                 }
             }
+
+           
+        }
+        .checkout__footer{
+            margin-top: 18px;
+            padding: 8px 0;
+            border-top: 1px solid #ccc;
+            width: 100%;
+            &-policy{
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                gap: 10px;
+                &__item{
+                    list-style: none;
+                    .checkout__footer-policy__link{
+                        text-decoration: none;
+                        color: var(--primary-color);
+                        font-weight:300;
+                        font-size: 1.5rem;
+                    }
+                }
+                
+            }
+            &-address{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                font-size: 1.4rem;
+                margin: 10px 0;
+                font-weight: 400;
+            }
         }
    }
 
    .checkout__order{
         width: 32%;
+        padding: 18px 24px;
+        background-color: #fafafa;
+        .order__title{
+            font-size: 1.8rem;
+            font-weight: 600;
+            margin-bottom: 18px;
+            padding-bottom: 18px;
+            border-bottom: 1px solid #ccc;
+        }
+        .order__list-product{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 18px;
+            padding-bottom: 18px;
+            border-bottom: 1px solid #ccc;
+            .order__product-img{
+                width: 32px;
+            
+            }
+            .order__product-name{
+                flex-grow: 1;
+                font-size: 1.4rem;
+                font-weight: 300;
+            }
+            .order__product-price{
+                font-size: 1.4rem;
+                font-weight: 300;
+            }
+        }
+        .order__sale{
+            margin-bottom: 18px;
+            padding-bottom: 18px;
+            border-bottom: 1px solid #ccc;
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            .order__input{
+                outline: none;
+                font-size: 1.5rem;
+                padding-left: 8px;
+                flex-grow: 1;
+                border-radius: 6px;
+                border: 1px solid var(--primary-color);
+            }
+            .order__button{
+                background-color: var(--primary-color);
+                color: #fff;
+                padding: 12px 18px;
+                border-radius: 6px;
+            }
+        }
+        .order__total{
+            margin-bottom: 18px;
+            padding-bottom: 18px;
+            .order__fee, .order__delivery{
+                font-size: 1.5rem;
+                font-weight: 300;
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 18px;
+            }
+            .order__delivery{
+                margin-bottom: 18px;
+                padding-bottom: 18px;
+                border-bottom: 1px solid #ccc;
+            }
+            .order__price-total{
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 18px;
+                & span:nth-child(1){
+                    font-size: 2rem;
+                    font-weight: 300;
+                }
+                & span:nth-child(2){
+                    font-size: 1.8rem;
+                    color: var(--primary-color);
+                }
+            }
+        }
         .checkout__order-title{
             font-size: 1.8rem;
             font-weight: 900;
             padding-bottom: 8px;
             border-bottom: 1px solid #ccc;
+        }
+
+        .order__button{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .order__link{
+                text-decoration: none;
+                color: var(--primary-color);
+                font-size: 1.5rem;
+                i{
+                    font-size: 1.8rem;
+                }
+            }
+            .order__submit{
+                background-color: var(--primary-color);
+                color: #fff;
+                padding: 12px 18px;
+                border-radius: 6px;
+            }
         }
 
         .checkout__product{
