--- a/src/pages/admin/components/Header/Header.scss
+++ b/src/pages/admin/components/Header/Header.scss
@@ -1,10 +1,11 @@
 .header__admin{
-    background-color: #eef7fe;
+    background-color: rgb(0, 117, 117);;
     display: flex;
    justify-content: flex-end;
     gap: 14px;
     height: 60px;
     line-height: 60px;
+    box-shadow: rgb(0 0 0 / 15%) 0px 10px 20px;
     // position: fixed;
     // top: 0;
     // right: 0;
@@ -18,10 +19,11 @@
 
         .header__admin__name{
             font-size: 1.5rem;
+            color: #fff;
         }
 
         .header__admin__link{
-            color: #000;
+            color: #fff;
         }
 
         .header__admin__logout{
@@ -29,9 +31,10 @@
             padding-right: 18px;
             cursor: pointer;
             font-size: 1.6rem;
+            color: #fff;
     
             &:hover{
-                opacity: 0.5;
+                opacity: 0.8;
             }
         }
     }
