--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar{
-    background-color: #eef7fe;
+    background-color: rgb(0, 117, 117);;
     height: 100vh;
     width: 18%;
     padding: 20px;
@@ -9,12 +9,15 @@
     position: fixed;
     left: 0;
     top: 0;
+    box-shadow: rgb(0 0 0 / 15%) 0px 10px 20px;
 
     &__logo{
         margin-bottom: 10px;
         font-size: 3rem;
         font-weight: 600;
-        color: #000;
+        color: #fff;
+        border-bottom: 1px solid #fff;
+        padding-bottom: 10px;
     }
 
     &__list{
@@ -26,8 +29,8 @@
             font-weight: 600;
             text-decoration: none;
             padding: 6px 18px;
-            color: red;
-            //font-size: 1.8rem;
+            font-size: 1.8rem;
+            color: #fff;
         }
 
         &-item{
@@ -35,7 +38,7 @@
             margin: 10px 0;
 
             .sidebar__list-link{
-                color: #000;
+                color: #fff;
                 text-decoration: none;
                 padding-left: 18px;
                 font-size: 1.5rem;
