--- a/src/pages/clients/Catalog/Catalog.scss
+++ b/src/pages/clients/Catalog/Catalog.scss
@@ -58,13 +58,33 @@
 }
 
 
+.list__product-catalog{
+    border-top: 1px solid #f1f1f1;
+    border-left: 1px solid #f1f1f1;
+}
 .catalog__filter{
-    background-color: rgba(0, 0, 0, 0.04);
-    padding: 12px 22px;
-    border-radius: 2px;
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-bottom: 8px;
+    .catalog__list{
+        list-style: none;
+        display: flex;
+        gap: 20px;
+        .catalog__item{
+            .catalog__link{
+                text-decoration: none;
+                color: #000;
+                opacity: 0.5;
+                font-weight: 300;
+                font-size: 1.5rem;
+                &:hover{
+                    color: var(--primary-color);
+                    opacity: 1;
+                }
+            }
+        }
+    }
 
     span{
         font-size: 1.4rem;
