--- a/src/pages/clients/Catalog/Catalog.scss
+++ b/src/pages/clients/Catalog/Catalog.scss
@@ -57,6 +57,12 @@
     }
 }
 
+.catalog__empty-product{
+    background-color: #0f8280d9;;
+    padding: 16px 12px;
+    color: #fff;
+    font-weight: 400;
+}
 
 .list__product-catalog{
     border-top: 1px solid #f1f1f1;
