--- a/src/pages/admin/components/Product/Product.scss
+++ b/src/pages/admin/components/Product/Product.scss
@@ -7,11 +7,16 @@
 
 .product{
     &__list{
-        & th:nth-child(2){
-            width: 200px;
+        thead{
+            height: 40px;
         }
-        img{
-            width: 50%;
+        & th:nth-child(2){
+            width: 400px;
+        }
+        tbody{
+            tr{
+            
+            }
         }
     }
 
@@ -33,6 +38,7 @@
 
             &-select{
                 height: 30px;
+                margin-right: 4px;
             }
         }
 
@@ -43,8 +49,6 @@
             color: #fff;
             font-size: 1.4rem;
             font-weight: 600;
-            height: 34px;
-            width: 64px;
             border-radius: 4px;
             cursor: pointer;
         }
