--- a/src/pages/clients/Checkout/Checkout.scss
+++ b/src/pages/clients/Checkout/Checkout.scss
@@ -26,26 +26,60 @@
                     margin-bottom: 8px;
                 }
             }
-            .content__payment{
-                width: 50%;
-                h3{
-                    margin-bottom: 8px;
-                }
-                .content__payment-body{
-                    border-top: 1px solid #ccc;
-                    border-left: 1px solid #ccc;
-                    .content__radio{
-                        padding: 20px;
-                        border-bottom: 1px solid #ccc;
-                        border-right: 1px solid #ccc;
-                       
+
+            .content__right{
+                flex: 1;
+
+                .content__delivery{
+                    .delivery__body{
+                        margin: 10px 0;
+                        border: 1px solid #ccc;
+                        padding: 18px 20px;
+                        display: flex;
+                        justify-content: space-between;
                         label{
                             margin-left: 6px;
+                            flex: 1;
+                            font-weight:300;
+                        }
+                        span{
+                            font-size: 1.4rem;
                         }
                     }
-                 
+                }
+                .content__payment{
+                    h3{
+                        margin-bottom: 8px;
+                    }
+                    .content__payment-body{
+                        border-top: 1px solid #ccc;
+                        border-left: 1px solid #ccc;
+
+                        .content__radio{
+                            padding: 18px 20px;
+                            border-bottom: 1px solid #ccc;
+                            border-right: 1px solid #ccc;
+                            display: flex;
+                            align-items: center;
+
+                            .radio__des{
+                                margin-left: 6px;
+                                p{
+                                    font-size: 1.3rem;
+                                    margin-top: 4px;
+                                    font-weight: 300;
+                                    color: #aaa;
+                                }
+                            }
+
+                          
+                           
+                        }
+                     
+                    }
                 }
             }
+           
 
            
         }
