change some thing template

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -189,3 +189,10 @@ select{
         }
     }
 }
+
+.handle-error{
+    color: red;
+    font-size: 1.3rem;
+    margin-bottom: 6px;
+    margin-top: -6px;
+}
