--- a/src/components/DefaultLayout/Header/Header.scss
+++ b/src/components/DefaultLayout/Header/Header.scss
@@ -1,7 +1,4 @@
 .header{
-    // background-color: #e3e6f2;
-    // width: 100%;
-
     background-color: var(--header-background);
     height: 86px;
 
@@ -10,15 +7,43 @@
         display: flex;
         align-items: center;
 
+        .header__logo__link{
+            text-decoration: none;
+            width: 100%;
+            max-width: 300px;
+            text-align: center;
+
+            .header__logo{
+                font-size: 5.4rem;
+                background: -webkit-linear-gradient(#f2df92, #d6b478);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                text-shadow: 1px 1px 10px rgba(0,0,0,0.4);
+                line-height: 1;
+                font-weight: 500;
+            }
+
+            .header__sub-logo{
+                color: #bccdcc;
+                font-size: 1.5rem;
+            }
+        }
+
+       
+
         .header__list{
+            width: 100%;
             display: flex;
             align-items: center;
+            justify-content: space-between;
             margin-left: 40px;
             color: var(--header-color);
             line-height: 2rem;
-            list-style: none;
-            flex: 1;
-            justify-content: space-between;
+            list-style: none;      
+
+            .header__list-link--auth{
+                font-size: 1.1rem;
+            }
 
             .system-shop{
                width: 68px;
@@ -28,9 +53,8 @@
                 border: 2px solid var(--subheader-background) ;
                 padding: 8px;
                 border-radius: 6px;
-
+            
                 &:hover{
-                    color: #fff !important;
                     background-color: var(--subheader-color);
                 }
             }
@@ -48,35 +72,35 @@
                     display: block;
                     text-decoration: none;
                     color: var(--header-color);
+
                     &:hover{
                         color: var(--secondary-color);
                         cursor: pointer;
                     }
+                  
+                }
+
+                .header__list-link--hover:hover{
+                    color: #fff !important;
                 }
             }
         }
-        .header__logo{
-            margin-right: 46px;
-            max-width: 248px;
-        }
+      
 
         .header__search{
-            position: relative;
-           
-            &-input{
-                width: 396px;
+           display: flex;
+
+            &-input{     
+                min-width: 340px;
                 background: #f1f1f1;
-                border-radius: 4px;
                 font-size: 1.4rem;
                 padding: 12px 14px;
-                
+                border-bottom-left-radius: 4px;
+                border-top-left-radius: 4px;
             }
 
             &-btn{
                 background-color: var(--secondary-color);
-                position: absolute;
-                right: 0;
-                height: 100%;
                 border-top-right-radius: 4px;
                 border-bottom-right-radius: 4px;
                 border-top-left-radius: 0;
@@ -190,3 +214,17 @@
         }
     }
 }
+
+@media only screen and (max-width: 769px){
+   .header__list-item--hiden{
+    display: none !important;
+   }
+
+   .header__list{
+    justify-content: flex-end !important;
+   }
+
+   .header__search{
+        display: none !important;
+   }
+ }
